# minecraft-rs

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/: blocks.json  entities.json  items.json  multi_noise.json  synced_registries.json  tags.json
extract/: .gitignore  start.bat
wither-bot/: Cargo.toml
wither-bot/src/: main.rs
wither-client/: Cargo.toml
wither-client/src/: lib.rs
wither-data/: Cargo.toml
wither-data/src/: lib.rs
wither-declare/: Cargo.toml
wither-declare/src/entity/: mod.rs
wither-extractor/: .gitignore  LICENSE  README.md  gradle.properties
wither-extractor/src/main/kotlin/de/snowii/extractor/extractors/: MultiNoise.kt
wither-macros/: Cargo.toml
wither-macros/src/: block_state.rs  lib.rs
wither-nbt/: Cargo.toml
wither-network/: Cargo.toml
wither-network/src/: lib.rs  packet_encoder.rs
wither-network/src/bytebuf/: deserializer.rs  mod.rs
wither-network/src/protocol/: mod.rs
wither-network/src/protocol/client/: mod.rs
wither-network/src/protocol/client/login/: hello.rs  login_compression.rs  login_disconnect.rs  login_finished.rs  mod.rs
wither-network/src/protocol/server/: mod.rs
wither-network/src/protocol/server/login/: cookie_response.rs  hello.rs  key.rs  login_acknowledged.rs  mod.rs
wither-network/src/protocol/server/status/: ping_request.rs
wither-network/src/types/: binary.rs  mod.rs  property.rs  uuid.rs
wither-protocol/: Cargo.toml
wither-protocol/src/: lib.rs
wither-protocol/src/bytebuf/: binary.rs  mod.rs  serializer.rs  uuid.rs
wither-protocol/src/client/: mod.rs
wither-protocol/src/client/login/: hello.rs  mod.rs
wither-protocol/src/client/status/: mod.rs  pong_response.rs  status_response.rs
wither-protocol/src/codec/: identifier.rs  slot.rs  var_int.rs
wither-protocol/src/server/: mod.rs
wither-protocol/src/server/handshake/: mod.rs
wither-protocol/src/server/login/: hello.rs  mod.rs
wither-protocol/src/server/status/: status_request.rs
wither-util/: Cargo.toml
wither-util/src/text/: mod.rs
wither-world/: Cargo.toml
wither-world/src/: coordinates.rs  cylindrical_chunk_iterator.rs  lib.rs
wither-world/src/block/: mod.rs
