[workspace]
resolver = "2"
members = [ "wither-bot","wither-client", "wither-data", "wither-declare", "wither-macros", "wither-nbt", "wither-network", "wither-util", "wither-world"]

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.43", features = ["full"] }

thiserror = "2"

bytes = "1.9"

# Concurrency/Parallelism and Synchronization
rayon = "1.10.0"

uuid = { version = "1.11.0", features = ["serde", "v3", "v4"] }
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
