[package]
name = "wither-world"
version = "0.1.0"
edition = "2021"

[dependencies]
wither-nbt = { path = "../wither-nbt" }
wither-data = { path = "../wither-data" }
wither-util = { path = "../wither-util" }

bytes.workspace = true
tokio.workspace = true
rayon.workspace = true
derive_more.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

dashmap = "6.1.0"

num-traits = "0.2"

# Compression   
flate2 = "1.0"
lz4 = "1.28.0"

file-guard = "0.2.0"
indexmap = "2.7.0"

enum_dispatch = "0.3.13"

fastnbt = { git = "https://github.com/owengage/fastnbt.git" }

noise = "0.9.0"

rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }